[project]
name = "meterhub"
dynamic = ["version"]
description = "SDK for MeterHub"
authors = [
    {name = "svtter", email = "svtter@qq.com"},
]
dependencies = [
    "requests>=2.32.3"
]
requires-python = ">=3.10,<4.0"
readme = "README.rst"
license = {text = "MIT"}


[tool.pdm]
distribution = true

[tool.ruff]
line-length = 88
indent-width = 2

[tool.pdm.version]
source = "file"
path = "meterhub/__init__.py"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"